--- a/frontend/html/report_edit_8_summ_rec.html
+++ b/frontend/html/report_edit_8_summ_rec.html
@@ -64,6 +64,7 @@ Overall the property appears to be in reasonable condition and there is no evide
 						<div class="clearfix"></div>
 						<label>Add New item</label><!--this bit should roll up-->
 							<input name="summ_rec_add_new_item_name" type="text" placeholder="Item Name" />
+							<input name="summ_rec_add_new_item_price" type="text" placeholder="Item Price" />
 							<textarea name="summ_rec_add_new_item_description" placeholder="Item Description"></textarea>
 							<a class="summ_rec_button" href="#">Add</a>
 						<div class="clearfix"></div>
