--- a/frontend/html/report_edit_9_quote.html
+++ b/frontend/html/report_edit_9_quote.html
@@ -49,7 +49,78 @@
 					<h2>Report Edit</h2>
 					<h3>Your Quote</h3>
 					<hr />
-					<!--actual content goes here-->
+					<div class="form_fields">
+						<h3>Your Details</h3>
+							<label>Name</label>
+								<input name="quote_your_name" type="text" value="Connel Financial Services" />
+							<label>Address</label>
+								<input name="quote_your_address_line_1" type="text" value="23 Milsom Street"/>
+								<input name="quote_your_address_line_2" type="text" value="Harbourne"/>
+								<input name="quote_your_address_city" type="text" value="Birmingham"/>
+								<input name="quote_your_address_postcode" type="text" value="B21 2EY"/>
+							<label>Quote Date</label>
+								<input name="quote_your_quote_date" type="text" value="17/04/2010" />
+							<label>Client Reference</label>
+								<input name="quote_your_client ref" type="text" value="Amb/review" />
+							<label>Quote Reference</label>
+								<input name="quote_your_quote_ref" type="text" value="Amb/review" />
+						<hr />
+						<h3>Our Details</h3>
+							<label>Surveyor</label>
+								<input name="quote_our_surveyor" type="text" value="Bryan Campbell C.S.R.T." />
+							<label>Company</label>
+								<input name="quote_our_company" type="text" value="Ambient Property Solutions Ltd" />
+							<label>Address</label>
+								<input name="quote_our_address_line_1" type="text" value="Unit 152" />
+								<input name="quote_our_address_line_2" type="text" value="27 Colmore Row" />
+								<input name="quote_our_address_city" type="text" value="Birmingham" />
+								<input name="quote_our_address_postcode" type="text" value="B3 2EW" />
+							<label>Telephone</label>
+								<input name="quote_our_telephone" type="text" value="0845 434 7772" />
+							<label>Fax</label>
+								<input name="quote_our_fax" type="text" value="0121 460 1027" />
+							<label>Email</label>
+								<input name="quote_our_email" type="text" value="info@ambientpropertysolutions.co.uk" />
+						<hr />
+						<h3>Message from the Surveyor</h3>
+						<textarea name="quote_message_from_surveyor">
+Condensation is usually caused by a combination of circumstances, and so a single factor remedy is unlikely to resolve the problem completely, the methods described will all assist in reducing the conditions where sub floor condensation can occur, however I would suggest a further discussion in which we can discuss the options or alternatives in further detail.</textarea>
+						<hr />
+						<h3>Recomended Items</h3>
+						<table><tbody  id="summ_rec_current_items_table"><!--this table is based on what was selected on the previous page-->
+							<tr>
+								<td width="100px"><p>Item Ref.</p></td>
+								<td width="550px"><p>Description</p></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td><p>001</p></td>
+								<td>
+									<h4>Install additional air vents</h4>
+									<p>By increasing the ventilation, this will allow for a far more efficient way in which
+									the air is circulated in this area which will decrease the amount of moisture
+									which can be transferred to the sub floor timbers.</p>
+								</td>
+								<td><p>&pound;90.00</p></td>
+							</tr>
+							<tr>
+								<td><p>002</p></td>
+								<td>
+									<h4>Install retrofit DPC</h4>
+									<p>The survey highlighted that the existing damp proof course had failed in the
+									areas highlighted in the enclosed sketch plan, therefore we would propose
+									installing a new DPC in this area to prevent future outbreaks of reising
+									dampness.</p>
+								</td>
+								<td><p>&pound;230.00</p></td>
+							</tr>
+							<tr>
+								<td></td>
+								<td>Sub Total</td>
+								<td>&pound;320.00</td>
+							</tr>
+						</tbody></table>
+					</div>
 					<div id="report_edit_back_forward">
 						<a href="report_edit_8_summ_rec.html">&#060; PREV</a>
 						<a href="report_edit_10_client_health_safety.html">NEXT &#062;</a>
