added comments on all of the existing pages, hopefully they will suffice

--- a/frontend/html/report_edit_10_client_health_safety.html
+++ b/frontend/html/report_edit_10_client_health_safety.html
@@ -1,4 +1,4 @@
-<!--main menu page that shows list of all current reports-->
+<!--client health / safety-->
 <!DOCTYPE html>
 <html>
 	<head>
@@ -49,7 +49,7 @@
 					<h2>Report Edit</h2>
 					<h3>Client Health &amp; Safety Data Sheet</h3>
 					<hr />
-					<div class="form_fields">
+					<div class="form_fields"><!--all of this stuff is default content-->
 						<h3>Safety Precautions</h3>
 						<textarea name="client_health_safety_safety_precautions">
 All damp proofing and timber treatment materials present some form of hazard but we will always strive to use the least hazardous materials available for the benefit of our clients and staff. Our operatives have been trained in the use of the materials that they work with and will take the necessary precautions. The hazard posed by our activities is insignificant provided the following safety precautions are followed by all who enter a property or area where treatment has taken place.</textarea>
