--- a/frontend/html/report_edit_11_terms_cond.html
+++ b/frontend/html/report_edit_11_terms_cond.html
@@ -49,7 +49,7 @@
 					<h2>Report Edit</h2>
 					<h3>Terms &amp; Conditions</h3>
 					<hr />
-					<div class="form_fields">
+					<div class="form_fields"><!--this is default too-->
 						<textarea>
 1. This estimate is based upon the current cost of labour and materials and is subject to variation should these items be increased.
 2. This estimate is based upon the assumption that our operatives will be able to complete the work contracted for during a continuous uninterrupted period. Should the client interrupt work, delay completion, or require separate stages to undertake the work, then any additional cost or loss to us would be chargeable to the client.
