--- a/frontend/html/report_edit_2_intro.html
+++ b/frontend/html/report_edit_2_intro.html
@@ -1,4 +1,4 @@
-<!--main menu page that shows list of all current reports-->
+<!--this is apparently all static, so I would leave these as the default values which can be change if the user wants to-->
 <!DOCTYPE html>
 <html>
 	<head>
