--- a/frontend/html/report_edit_3_prop_info.html
+++ b/frontend/html/report_edit_3_prop_info.html
@@ -1,4 +1,4 @@
-<!--main menu page that shows list of all current reports-->
+<!--property information and instructions-->
 <!DOCTYPE html>
 <html>
 	<head>
@@ -53,6 +53,7 @@
 						<h4>Instructing Client(s)</h4>
 						<label>Photo</label>
 							<input name="prop_info_photo" type="file" />
+						<!--name, address and date can probably be grabbed from the front page and placed in here, they should be the same-->
 						<label>Name</label>
 							<input name="prop_info_name" type="text" value="Connel Financial Services"/>
 						<label>Address</label>
@@ -60,6 +61,7 @@
 							<input name="prop_info_address_line2" type="text" placeholder="Street Address Line 2" />
 							<input name="prop_info_address_city" type="text" placeholder="City" />
 							<input name="prop_info_address_postcode" type="text" placeholder="Postcode" />
+						<!--value=""'s below here are just placeholders, remove them when you start working-->
 						<label>Date</label>
 							<input name="prop_info_date" type="date" value="17/04/2010"/>
 						<label>Reference</label>
@@ -68,11 +70,11 @@
 						<label>Date of Survey</label>
 							<input name="prop_info_date_of_survey" type="date" value="17/04/2010" />
 						<label>Weather Condition</label>
-							<input name="prop_info_weather_condition" type="text" value="Overcast" />
+							<input name="prop_info_weather_condition" type="text" value="Overcast" /><!-- this could be a dropdown isntead, waiting to hear what the client has to say-->
 						<label>Thickness of Walls</label>
 							<input name="prop_info_thickness_of_walls" type="text" value="225mm" />
 						<label>Type of Survey</label>
-							<input name="prop_info_type_of_survey" type="text" value="Standard non destructive" />
+							<input name="prop_info_type_of_survey" type="text" value="Standard non destructive" /><!--this could be a dropdown too-->
 						<label>Surveyor</label>
 							<input name="prop_info_surveyor" type="text" value="Bryan Campbell C.S.R.T." />
 						<hr />
