--- a/frontend/html/report_edit_4_damp_inspec.html
+++ b/frontend/html/report_edit_4_damp_inspec.html
@@ -1,4 +1,4 @@
-<!--main menu page that shows list of all current reports-->
+<!--dampness inspection-->
 <!DOCTYPE html>
 <html>
 	<head>
@@ -51,15 +51,19 @@
 					<hr />
 					<div class="form_fields">
 						<label>Opening Pragraph</label>
+						<!--this should stay like this as the default-->
 							<textarea name="damp_inspec_opening_paragraph">
 A visual inspection of the exterior of the property was undertaken to identify any obvious defects which could be a contributory factor to any areas requiring specific attention as detailed in the client’s instructions, such as faulty rainwater goods, broken/missing roof tiles, cracked brickwork or rendering or high exterior ground levels.</textarea>
 						<label>External Observations</label>
+						<!--this is just placeholder-->
 							<textarea name="damp_inspec_external_observations">
 The exterior of the building appeared to be in reasonable condition, however it was noted that there appeared to be insufficient sub floor ventilation to the areas indicated in the enclosed sketch plan, lack of ventilation in these areas are a significant cause of decay to the floor joists and due to this area remaining concealed this decay can go unnoticed and potentially lead to the onset of dry rot, therefore we would suggest increasing the ventilation in these areas.</textarea>
 						<label>Moisture Infobox</label>
+						<!--this should stay as the default-->
 							<textarea name="damp_inspec_moisture_infobox">
 Moisture profiles are the most effective non destructive method of establishing the cause of dampness in buildings, electrical resistance of the materials are measured using a conductivity meter, along with sub surface measurements, the results are recorded on a chart and the patterns analysed, and along with any other significant findings a diagnosis is reached, when the results are inconclusive we will recommend further tests, the most common being salt analysis.</textarea>
 						<label>Internal Observations</label>
+						<!--this is placeholder-->
 							<textarea name="damp_inspec_internal_observations">
 Moisture readings were taken at the base of all accessible load bearing wall surfaces, from these readings a moisture profile was created and analysed. All of what we would regard as 'abnormal' readings were investigated and from the evidence available to us at the time of our inspection there was evidence to suggest that rising dampness has been present in the walls indicated in the enclosed sketch plan.
 
