--- a/frontend/html/report_edit_6_sketch.html
+++ b/frontend/html/report_edit_6_sketch.html
@@ -1,4 +1,4 @@
-<!--main menu page that shows list of all current reports-->
+<!--sketch-->
 <!DOCTYPE html>
 <html>
 	<head>
@@ -52,6 +52,7 @@
 					<div class="form_fields">
 						<label>Sketch Image</label>
 							<input name="sketch_photo" type="file" />
+						<!--I'm fairly sure that you can figure out these things from report edit 1, need to confirm with the client-->
 						<label>Name</label>
 							<input name="sketch_name" type="text" value="Connel Financial Services"/>
 						<label>Address</label>
