--- a/frontend/html/report_edit_7_timber_surv.html
+++ b/frontend/html/report_edit_7_timber_surv.html
@@ -1,4 +1,4 @@
-<!--main menu page that shows list of all current reports-->
+<!--timber survey-->
 <!DOCTYPE html>
 <html>
 	<head>
@@ -54,7 +54,8 @@
 							<textarea name="timber_serv_opening_paragraph">
 A detailed examination was carried out to determine the presence of any wood boring insects and/or wood rotting fungi, the results of this survey are as follows:</textarea>
 						<hr />
-						<!-- this bit will be all javascript-y -->
+						<!-- this bit will be all javascript-y
+							probably only start with one box and additional boxes can be added as needed -->
 						<h4>Observations</h4>
 						<div class="timber_surv_observation">
 							<label>Area Type</label>
@@ -76,7 +77,8 @@ A detailed examination was carried out to determine the presence of any wood bor
 							<label>Description</label>
 								<textarea name="<!--you'll need to do this bit-->" placeholder="insert description here..."></textarea>
 						</div>
-						<p class="list_add_new"><a href="#">add new (+)</a></p>
+						<!--this will add another timber-surver_observation div-->
+						<p class="list_add_new"><a href="#">Add</a></p>
 					</div>
 					<div id="report_edit_back_forward">
 						<a href="report_edit_6_sketch.html">&#060; PREV</a>
