--- a/frontend/html/report_edit_9_quote.html
+++ b/frontend/html/report_edit_9_quote.html
@@ -1,4 +1,4 @@
-<!--main menu page that shows list of all current reports-->
+<!--quote page-->
 <!DOCTYPE html>
 <html>
 	<head>
@@ -49,8 +49,8 @@
 					<h2>Report Edit</h2>
 					<h3>Your Quote</h3>
 					<hr />
-					<div class="form_fields">
-						<h3>Your Details</h3>
+					<div class="form_fields"><!--all values on this page are placeholder-->
+						<h3>Your Details</h3><!--this should be doable from report edit 1 and report edit 3-->
 							<label>Name</label>
 								<input name="quote_your_name" type="text" value="Connel Financial Services" />
 							<label>Address</label>
@@ -65,7 +65,7 @@
 							<label>Quote Reference</label>
 								<input name="quote_your_quote_ref" type="text" value="Amb/review" />
 						<hr />
-						<h3>Our Details</h3>
+						<h3>Our Details</h3><!--probably base this on some options on the settings page-->
 							<label>Surveyor</label>
 								<input name="quote_our_surveyor" type="text" value="Bryan Campbell C.S.R.T." />
 							<label>Company</label>
@@ -114,7 +114,7 @@ Condensation is usually caused by a combination of circumstances, and so a singl
 								</td>
 								<td><p>&pound;230.00</p></td>
 							</tr>
-							<tr>
+							<tr><!--a bit of simple math to figure this bit out-->
 								<td></td>
 								<td>Sub Total</td>
 								<td>&pound;320.00</td>
