--- a/frontend/html/main_menu.html
+++ b/frontend/html/main_menu.html
@@ -13,34 +13,39 @@
 			<div id="main_content">
 				<div id="main_content_lhs">
 					<ul id="nav">
-						<a href="#">
+						<a href="new_report.php">
 							<li>	
 								<p>New Report</p>
 								<img src="style/images/newreport.png"></img>
 							</li>
 						</a>
-						<a href="#">
+						<a href="reports.php">
 							<li>
 								<p>Reports</p>
 								<img src="style/images/reports.png"></img>
 							</li>
 						</a>
-						<a href="#">
+						<a href="clients.php">
 							<li>
 								<p>Clients</p>
 								<img src="style/images/clients.png"></img>
 							</li>
 						</a>
-						<a href="#">
+						<a href="email.php">
 							<li>
 								<p>Email</p>
 								<img src="style/images/email.png"></img>
 							</li>
 						</a>
-						<a href="#">
+						<a href="settings.php">
 							<li>
 								<p>Settings</p>
 								<img src="style/images/settings.png"></img>
+							</li>
+						</a>
+						<a href="logout.php">
+							<li>
+								<p>Logout</p>
 							</li>
 						</a>
 					</ul>
